[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/assets/testTiles.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/instance/entities/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/instance/Met.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/main_scenes/fields.gd" type="Script" id=4]
[ext_resource path="res://scenes/instance/entities/enemies/Tarantula.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/instance/entities/enemies/evil_carrot.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/assets/architecture/bunny/farm_house.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/assets/architecture/windmill.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/assets/tall_grass.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/instance/entities/PineTreeBody.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/instance/door_way.tscn" type="PackedScene" id=11]

[node name="fields" type="TileMap"]
cell_y_sort = true
format = 1
script = ExtResource( 4 )

[node name="tile_sets" type="Node2D" parent="."]
modulate = Color( 0, 1, 0.576471, 1 )

[node name="TS1" parent="tile_sets" instance=ExtResource( 1 )]
tile_data = PoolIntArray( -1245179, 2, 0, -1245178, 2, 0, -1179644, 2, 0, -1179643, 0, 0, -1179642, 0, 0, -1179641, 1, 0, -1114109, 0, 0, -1114108, 0, 0, -1114107, 0, 0, -1114106, 0, 0, -1114105, 1, 0, -1048573, 2, 0, -1048572, 0, 0, -1048571, 0, 0, -1048570, 0, 0, -1048569, 3, 0, -983038, 2, 0, -983037, 0, 0, -983036, 0, 0, -983035, 0, 0, -983034, 0, 0, -983033, 0, 0, -983032, 1, 0, -917502, 0, 0, -917501, 0, 0, -917500, 0, 0, -917499, 0, 0, -917498, 0, 0, -917497, 7, 0, -851966, 0, 0, -851965, 0, 0, -851964, 0, 0, -851963, 0, 0, -851962, 1, 0, -786428, 0, 0, -786427, 1, 0, -720895, 2, 0, -720894, 2, 0, -720893, 2, 0, -720892, 0, 0, -720891, 1, 0, -655359, 0, 0, -655358, 0, 0, -655357, 0, 0, -655356, 0, 0, -655355, 1, 0, -589823, 0, 0, -589822, 1, 0, -589821, 0, 0, -589820, 1, 0, -524287, 0, 0, -524286, 1, 0, -524285, 0, 0, -524284, 1, 0, -458751, 0, 0, -458750, 3, 0, -393215, 0, 0, -393214, 0, 0, -393212, 2, 0, -327679, 2, 0, -327678, 0, 0, -327677, 3, 0, -327676, 0, 0, -327675, 1, 0, -262144, 2, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 1, 0, -196608, 0, 0, -196607, 0, 0, -196606, 10, 0, -196605, 14, 0, -196604, 14, 0, -196603, 8, 0, -131072, 0, 0, -131071, 1, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 7, 0, -65536, 0, 0 )

[node name="TS2" parent="tile_sets" instance=ExtResource( 1 )]
tile_data = PoolIntArray( -720896, 11, 0, -655360, 11, 0, -589824, 11, 0, -589822, 11, 0, -589820, 11, 0, -524288, 11, 0, -524286, 11, 0, -524284, 11, 0, -458752, 11, 0, -458750, 11, 0, -458748, 11, 0, -393216, 11, 0, -393213, 1, 0, -327679, 11, 0, -196606, 1, 0 )

[node name="Met" parent="." instance=ExtResource( 3 )]
position = Vector2( 160.034, 154.872 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 547.135, 378.285 )

[node name="evil_carrot" parent="." instance=ExtResource( 6 )]
position = Vector2( 223.474, 1413.74 )

[node name="evil_carrot2" parent="." instance=ExtResource( 6 )]
position = Vector2( 140.145, 1468.95 )

[node name="Tarantula" parent="." instance=ExtResource( 5 )]
position = Vector2( 243.581, 1337.82 )

[node name="evil_carrot5" parent="." instance=ExtResource( 6 )]
position = Vector2( -673.051, 2190.03 )

[node name="evil_carrot6" parent="." instance=ExtResource( 6 )]
position = Vector2( -739.693, 2232.87 )

[node name="evil_carrot7" parent="." instance=ExtResource( 6 )]
position = Vector2( -812.681, 2272.53 )

[node name="evil_carrot8" parent="." instance=ExtResource( 6 )]
position = Vector2( -603.237, 2145.6 )

[node name="evil_carrot9" parent="." instance=ExtResource( 6 )]
position = Vector2( -530.249, 2105.93 )

[node name="evil_carrot14" parent="." instance=ExtResource( 6 )]
position = Vector2( -493.933, 2225.26 )

[node name="evil_carrot13" parent="." instance=ExtResource( 6 )]
position = Vector2( -560.574, 2268.1 )

[node name="evil_carrot12" parent="." instance=ExtResource( 6 )]
position = Vector2( -633.562, 2307.77 )

[node name="evil_carrot11" parent="." instance=ExtResource( 6 )]
position = Vector2( -424.118, 2180.84 )

[node name="evil_carrot10" parent="." instance=ExtResource( 6 )]
position = Vector2( -351.13, 2141.17 )

[node name="evil_carrot19" parent="." instance=ExtResource( 6 )]
position = Vector2( -414.651, 2612.86 )

[node name="evil_carrot18" parent="." instance=ExtResource( 6 )]
position = Vector2( -481.292, 2655.7 )

[node name="evil_carrot17" parent="." instance=ExtResource( 6 )]
position = Vector2( -554.28, 2695.37 )

[node name="evil_carrot16" parent="." instance=ExtResource( 6 )]
position = Vector2( -344.836, 2568.44 )

[node name="evil_carrot15" parent="." instance=ExtResource( 6 )]
position = Vector2( -271.848, 2528.77 )

[node name="evil_carrot24" parent="." instance=ExtResource( 6 )]
position = Vector2( -1192.79, 2477.79 )

[node name="evil_carrot23" parent="." instance=ExtResource( 6 )]
position = Vector2( -1259.43, 2520.63 )

[node name="evil_carrot22" parent="." instance=ExtResource( 6 )]
position = Vector2( -1332.42, 2560.3 )

[node name="evil_carrot21" parent="." instance=ExtResource( 6 )]
position = Vector2( -1122.97, 2433.36 )

[node name="evil_carrot20" parent="." instance=ExtResource( 6 )]
position = Vector2( -1049.99, 2393.7 )

[node name="evil_carrot29" parent="." instance=ExtResource( 6 )]
position = Vector2( -1025.02, 2521.73 )

[node name="evil_carrot28" parent="." instance=ExtResource( 6 )]
position = Vector2( -1091.66, 2564.57 )

[node name="evil_carrot27" parent="." instance=ExtResource( 6 )]
position = Vector2( -1164.65, 2604.24 )

[node name="evil_carrot26" parent="." instance=ExtResource( 6 )]
position = Vector2( -955.199, 2477.3 )

[node name="evil_carrot25" parent="." instance=ExtResource( 6 )]
position = Vector2( -882.219, 2437.64 )

[node name="evil_carrot34" parent="." instance=ExtResource( 6 )]
position = Vector2( -545.672, 2581.65 )

[node name="evil_carrot33" parent="." instance=ExtResource( 6 )]
position = Vector2( -612.312, 2624.49 )

[node name="evil_carrot32" parent="." instance=ExtResource( 6 )]
position = Vector2( -685.302, 2664.16 )

[node name="evil_carrot31" parent="." instance=ExtResource( 6 )]
position = Vector2( -475.852, 2537.22 )

[node name="evil_carrot30" parent="." instance=ExtResource( 6 )]
position = Vector2( -402.872, 2497.56 )

[node name="farm_house" parent="." instance=ExtResource( 7 )]
position = Vector2( -1060.51, 2111.05 )

[node name="windmill" parent="." instance=ExtResource( 8 )]
position = Vector2( -1358.4, 2273.73 )
scale = Vector2( 0.25, 0.25 )

[node name="Tarantula2" parent="." instance=ExtResource( 5 )]
position = Vector2( -978.222, 2659.06 )

[node name="tall_grass" parent="." instance=ExtResource( 9 )]
position = Vector2( 542.343, 644.002 )

[node name="tall_grass2" parent="." instance=ExtResource( 9 )]
position = Vector2( 574.947, 692.908 )

[node name="tall_grass3" parent="." instance=ExtResource( 9 )]
position = Vector2( 504.304, 671.172 )

[node name="tall_grass4" parent="." instance=ExtResource( 9 )]
position = Vector2( -533.608, 1220.02 )

[node name="tall_grass5" parent="." instance=ExtResource( 9 )]
position = Vector2( -587.948, 1263.49 )

[node name="tall_grass10" parent="." instance=ExtResource( 9 )]
position = Vector2( 93.1196, 1721.95 )

[node name="tall_grass11" parent="." instance=ExtResource( 9 )]
position = Vector2( 45.4183, 1679.55 )

[node name="tall_grass12" parent="." instance=ExtResource( 9 )]
position = Vector2( 16.2676, 1721.95 )

[node name="tall_grass16" parent="." instance=ExtResource( 9 )]
position = Vector2( 179.634, 2302.81 )

[node name="tall_grass17" parent="." instance=ExtResource( 9 )]
position = Vector2( 134.254, 2266.51 )

[node name="tall_grass18" parent="." instance=ExtResource( 9 )]
position = Vector2( 191.041, 2245.86 )

[node name="tall_grass19" parent="." instance=ExtResource( 9 )]
position = Vector2( -1280.24, 2338.78 )

[node name="tall_grass20" parent="." instance=ExtResource( 9 )]
position = Vector2( -1337.03, 2349.1 )

[node name="tall_grass21" parent="." instance=ExtResource( 9 )]
position = Vector2( -1295.73, 2411.05 )

[node name="tall_grass13" parent="." instance=ExtResource( 9 )]
position = Vector2( -561.448, 1650.4 )

[node name="tall_grass14" parent="." instance=ExtResource( 9 )]
position = Vector2( -601.199, 1690.15 )

[node name="tall_grass15" parent="." instance=ExtResource( 9 )]
position = Vector2( -540.247, 1698.1 )

[node name="tall_grass6" parent="." instance=ExtResource( 9 )]
position = Vector2( -528.173, 1274.36 )

[node name="tall_grass7" parent="." instance=ExtResource( 9 )]
position = Vector2( 1428.1, 752.683 )

[node name="tall_grass8" parent="." instance=ExtResource( 9 )]
position = Vector2( 1390.06, 763.552 )

[node name="tall_grass9" parent="." instance=ExtResource( 9 )]
position = Vector2( 1417.23, 812.459 )

[node name="PineTree" parent="." instance=ExtResource( 10 )]
position = Vector2( 157.589, 597.75 )

[node name="PineTree2" parent="." instance=ExtResource( 10 )]
position = Vector2( 320.611, 815.114 )

[node name="PineTree3" parent="." instance=ExtResource( 10 )]
position = Vector2( 1608.49, 831.416 )

[node name="PineTree4" parent="." instance=ExtResource( 10 )]
position = Vector2( 522.889, 473.289 )

[node name="PineTree5" parent="." instance=ExtResource( 10 )]
position = Vector2( 1385.69, 478.2 )

[node name="PineTree6" parent="." instance=ExtResource( 10 )]
position = Vector2( 1695.44, 451.03 )

[node name="PineTree7" parent="." instance=ExtResource( 10 )]
position = Vector2( -831.416, 1456.34 )

[node name="PineTree8" parent="." instance=ExtResource( 10 )]
position = Vector2( -1027.04, 1565.02 )

[node name="PineTree9" parent="." instance=ExtResource( 10 )]
position = Vector2( 451.03, 1646.53 )

[node name="PineTree10" parent="." instance=ExtResource( 10 )]
position = Vector2( 210.785, 2109.86 )

[node name="PineTree11" parent="." instance=ExtResource( 10 )]
position = Vector2( 56.3428, 2350.1 )

[node name="PineTree12" parent="." instance=ExtResource( 10 )]
position = Vector2( 325.187, 2418.74 )

[node name="PineTree13" parent="." instance=ExtResource( 10 )]
position = Vector2( -1499.52, 2132.74 )

[node name="PineTree14" parent="." instance=ExtResource( 10 )]
position = Vector2( -1745.49, 2258.58 )

[node name="door_church_yard" parent="." instance=ExtResource( 11 )]
position = Vector2( 727.141, 261.819 )
scale = Vector2( 40, 5 )

[node name="fields_door" parent="." instance=ExtResource( 11 )]
position = Vector2( -2154.14, 2723.42 )
scale = Vector2( 10, 20 )

[node name="inner_farm_house_door" parent="." instance=ExtResource( 11 )]
position = Vector2( -1057.24, 2096.4 )
scale = Vector2( 10, 5 )
